--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
       </div>
       <div id="shenghuozhao">
         <h3>生活照</h3>
-        <a href="/1.jpg" target="_blank">
-          <img src="/1.jpg" alt="pic1" width="400" /> </a
+        <a href="./1.jpg" target="_blank">
+          <img src="./1.jpg" alt="pic1" width="400" /> </a
         ><br />
-        <a href="/2.jpg" target="_blank">
-          <img src="/2.jpg" alt="pic2" width="400" /> </a
+        <a href="./2.jpg" target="_blank">
+          <img src="./2.jpg" alt="pic2" width="400" /> </a
         ><br />
-        <a href="/3.jpg" target="_blank">
-          <img src="/3.jpg" alt="pic3" width="400" />
+        <a href="./3.jpg" target="_blank">
+          <img src="./3.jpg" alt="pic3" width="400" />
         </a>
       </div>
       <div id="shengping">
